fix(cli): fix icon vertical-align
affects: @varlet/cli

--- a/packages/varlet-cli/site/components/icon/icon.less
+++ b/packages/varlet-cli/site/components/icon/icon.less
@@ -12,6 +12,7 @@
   align-items: center;
   font-size: var(--site-icon-size);
   color: inherit;
+  vertical-align: bottom;
 
   &--shrinking {
     transform: scale(0);
